# yt-spleet

./: .gitignore  Dockerfile  Dockerfile.m1  README.md  TESTS.md  package.json  pyproject.toml  test.py
.github/workflows/: push-to-dockerhub.yml
src/: main.py
src/lib/: demucs_processor.py  envutils.py  spleeter.py  tracklist_parser.py  utils.py  ytdl.py
