[project]
name = "yt-spleet"
version = "0.1.0"
description = "Download YouTube videos and split audio into vocals and accompaniment using Demucs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["yt-dlp>=2024.0.0", "demucs>=4.0.0", "litellm>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
yt-spleet = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest>=7.0.0"]
